# tscompiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
example/: complex.ts  simple.ts
include/: typescript_compiler.h
src/: main.cpp
src/common/: Token.h  TokenList.h
src/compiler/: Compiler.cpp  Compiler.h
src/lexer/: Lexer.cpp  Lexer.h
src/parser/: Parser.cpp  Parser.h
src/utils/: string.cpp  string.h
